--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">Aston_intensiv_final_project</string>
+    <string name="app_name">News APP</string>
     <string name="headlines">Headlines</string>
     <string name="saved">Saved</string>
     <string name="sources">Sources</string>
     <string name="search">Search</string>
+    <string name="source_description">%1$s | %2$s</string>
 </resources>
