--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,5 @@
     <string name="sources">Sources</string>
     <string name="search">Search</string>
     <string name="source_description">%1$s | %2$s</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="null_content_description">We can\'t display the content right now.\n Try later</string>
 </resources>
