--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="search">Search</string>
     <string name="source_description">%1$s | %2$s</string>
     <string name="null_content_description">We can\'t display the content right now.\n Try later</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
