--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,6 @@
     <string name="search">Search</string>
     <string name="source_description">%1$s | %2$s</string>
     <string name="null_content_description">We can\'t display the content right now.\n Try later</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="language_english">English</string>
     <string name="language_russian">Русский</string>
     <string name="language_german">Deutsch</string>
@@ -26,4 +24,7 @@
     <string name="category_entertainment">Entertainment</string>
     <string name="category_sports">Sports</string>
     <string name="category_technology">Technology</string>
+    <string name="refresh_text">Refresh</string>
+    <string name="no_internet_text">No internet connection</string>
+    <string name="something_wrong_text">Something went wrong\n Try later</string>
 </resources>
